--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "hbs": "^4.1.1",
-    "micro": "^9.3.4"
+    "micro": "^9.3.4",
+    "mongoose": "^5.11.17"
   }
 }
