--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "hbs": "^4.1.1",
     "jsonwebtoken": "^8.5.1",
     "micro": "^9.3.4",
-    "mongoose": "^5.11.17"
+    "mongoose": "^5.11.17",
+    "validator": "^13.5.2"
   }
 }
